--- a/docker-compose-nzb.yml
+++ b/docker-compose-nzb.yml
@@ -37,3 +37,22 @@ services:
       - '/volume1/docker/sonarr:/config'
       - '/volume1/downloads:/downloads'
       - '/volume1/video/tv:/tv'
+  radarr:
+    image: linuxserver/radarr
+    container_name: radarr
+    privileged: false
+    restart: always
+    network_mode: bridge
+    links:
+      - nzbget
+    mem_swappiness: -1 # temp workaround
+    ports:
+      - '7878:7878'
+    environment:
+      - PUID=0
+      - PGID=101
+      - TZ=Europe/Berlin
+    volumes:
+      - '/volume1/docker/radarr:/config'
+      - '/volume1/downloads:/downloads'
+      - '/volume1/video/movies:/movies'
